--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 imageio==2.9.0
 matplotlib==3.3.3
 numpy==1.19.4
-opencv-python==4.4.0.46
 Pillow==8.0.1
 protobuf==3.14.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 PyWavelets==1.1.1
 scikit-image==0.17.2
-scipy==1.5.4
+scipy
 six==1.15.0
 tifffile==2020.11.18
 typing-extensions==3.7.4.3
