--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Super-SloMo"]
-	path = Super-SloMo
+[submodule "SuperSloMo"]
+	path = SuperSloMo
 	url = https://github.com/avinashpaliwal/Super-SloMo
