--- a/reqs.yaml
+++ b/reqs.yaml
@@ -17,10 +17,10 @@ dependencies:
   - brotlipy=0.7.0=py36h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2020.10.14=0
+  - ca-certificates=2020.12.8=h06a4308_0
   - cachetools=4.1.1=py_0
   - cairo=1.14.12=h8948797_3
-  - certifi=2020.11.8=py36h06a4308_0
+  - certifi=2020.12.5=py36h06a4308_0
   - cffi=1.14.3=py36h261ae71_2
   - chardet=3.0.4=py36h06a4308_1003
   - click=7.1.2=py_0
@@ -88,7 +88,7 @@ dependencies:
   - oauthlib=3.1.0=py_0
   - olefile=0.46=py36_0
   - opencv=3.4.2=py36h6fd60c2_1
-  - openssl=1.1.1h=h7b6447c_0
+  - openssl=1.1.1i=h27cfd23_0
   - opt_einsum=3.1.0=py_0
   - pcre=8.44=he6710b0_0
   - pillow=8.0.1=py36he98fc37_0
@@ -128,6 +128,7 @@ dependencies:
   - tk=8.6.10=hbc83047_0
   - torchvision=0.2.0=py36h17b6947_1
   - tornado=6.0.4=py36h7b6447c_1
+  - tqdm=4.51.0=pyhd3eb1b0_0
   - typing_extensions=3.7.4.3=py_0
   - urllib3=1.25.11=py_0
   - werkzeug=1.0.1=py_0
